--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,12 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "redis": "^3.1.2",
     "sequelize": "^6.37.7",
     "winston": "^3.17.0",
     "zod": "^4.0.5"
