--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,31 @@
 version: '3.8'
 
 services:
+  backend:
+    build: ./backend
+    container_name: backend_container
+    restart: unless-stopped
+    ports:
+      - '5001:5001'
+    environment:
+      - NODE_ENV=development
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - JWT_SECRET=${JWT_SECRET}
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+    depends_on:
+      - postgres
+      - redis
+    networks:
+      - app-network
+
   postgres:
     image: postgres:15-alpine
     container_name: postgres_container
@@ -16,15 +41,6 @@ services:
     networks:
       - app-network
 
-  adminer:
-    image: adminer
-    container_name: adminer_container
-    restart: always
-    ports:
-      - '8080:8080'
-    networks:
-      - app-network
-
   redis:
     image: redis:7-alpine
     container_name: redis_container
@@ -33,6 +49,17 @@ services:
       - '6379:6379'
     volumes:
       - redis_data:/data
+    networks:
+      - app-network
+
+  adminer:
+    image: adminer
+    container_name: adminer_container
+    restart: always
+    ports:
+      - '8080:8080'
+    depends_on:
+      - postgres
     networks:
       - app-network
 
